--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ django-extra-views==0.13.0
 django-haystack==3.0
 django-heroku==0.3.1
 django-oscar==3.0.2
+django-oscar-api==3.0.0
 django-phonenumber-field==3.0.1
 django-tables2==2.3.4
 django-treebeard==4.4
 django-widget-tweaks==1.4.8
+djangorestframework==3.12.4
 factory-boy==2.12.0
 Faker==8.9.1
 gunicorn==20.1.0
